[tool.poetry]
name = "environmental-weather-dashboard"
version = "0.1.0"
description = ""
authors = ["VICTORS_LAPTOP\\saarv <saarms5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
streamlit = "^1.53.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
